--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-body{
+.aboutc{
     background:#F8F8FF;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
- }
+    overflow-x: hidden;
+}
+ 
   .Title {
-     font-family: 'Karma';
+      font-family: 'Karma';
       position: relative;
       font-size: 128px;
       text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
@@ -26,7 +28,7 @@ body{
       text-align: center;
     }
 
-    .sub {
+    .sub{
       font-family: 'Kosugi';
       position: relative;
       font-size: 48px;
@@ -102,27 +104,26 @@ body{
     margin: 30px auto 0 auto; 
   }
 
-  .Info3{
-     position:absolute;
-     left: 80px;
+  .education{
+     position:static;
+     margin-left:-1030px;
      font-size:36px;
      font-family:'Kosugi Maru';
      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
-     margin-bottom: 90px;
+     margin-bottom: -15px;
       
   }
-   .sub3{
+    .sub3{
      font-family: 'Kosugi';
-     position: absolute;
-     left:80px;
+     position: static;
+     margin-left:85px;
      font-size: 32px;
      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
      display: flex;
      flex-direction: column;
-     bottom: -1520px;
-     line-height: 1.05;  
-     margin: 0;                    
+     line-height: 1.05;                   
      gap: 4px;  
+     margin-bottom:60px;
   }
    .sub3 p {
       margin: 0;
@@ -130,85 +131,168 @@ body{
     }  
 
 
-     .Info4{
-     position:absolute;
-     left: -7px;
-     top: 85px;
+     .softwares{
+     position:static;
+     margin-left: -1030px;
      font-size:36px;
      font-family:'Kosugi Maru';
      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
-    
+     margin-bottom: 90px;
       
   }
    .sub4{
      font-family: 'Kosugi';
-     position: absolute;
-     left:-7px;
-     top:240px;
+     position:static;
+     margin-left:85px;
+     margin-bottom: 100px;
      font-size: 32px;
      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
      display: flex;
      flex-direction: column;
-     line-height: 1.05;  
-     margin: 0;                    
+     line-height: 1.05;                      
      gap: 4px;  
   }
    .sub4 p{
       margin: 0;
       padding: 0;
     }  
-   
-      .info5{
-     position:absolute;
-     right: -850px;
-     top: -175px;
-     font-size:36px;
-     font-family:'Kosugi Maru';
-     text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+
+    .language{
+      font-family:'Kosugi Maru';
+      font-size:36px;
+      position:static;
+      margin-left:-1030px;
+      bottom:-1920px;
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
     }
-   .sub5{
-     font-family: 'Kosugi';
-     position: absolute;
-     right:-955px;
-     top:-15px;
-     font-size: 32px;
-     text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
-     display: flex;
-     flex-direction: column;
-     line-height: 1.05;  
-     margin: 0;                    
-     gap: 4px;  
-  }
+
+    .sub5{
+      font-family:'Kosugi';
+      font-size: 32px;
+      position:static;
+      margin-left:85px;
+      bottom: -1990px;
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+      display: flex;
+      flex-direction: column;
+      line-height: 1.05;                      
+      gap: 4px;  
+   }
    .sub5 p{
       margin: 0;
       padding: 0;
-    }  
-
-     .info6{
-     position:absolute;
-     right: -850px;
-     bottom: -120px;
-     font-size:36px;
-     font-family:'Kosugi Maru';
-     text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+    } 
+    
+   .exp{
+      position:static;
+      font-family:'Kosugi Maru';
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+      font-size:36px;
+      text-align: right;
+      margin-right:-500px;
+      margin-top: -950px;      
     }
-   .sub6{
-     font-family: 'Kosugi';
-     position: absolute;
-     right:-1065px;
-     bottom:-260px;
-     font-size: 32px;
-     text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
-     display: flex;
-     flex-direction: column;
-     line-height: 1.05;  
-     margin: 0;                    
-     gap: 4px;  
-  }
-   .sub6 p{
+
+    .sub6{
+      font-family:'Kosugi';
+      font-size: 32px;
+      position:relative;
+      right: -750px;
+      margin-bottom: -500px;
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+      display: flex;
+      flex-direction: column;
+      line-height: 1.05;                  
+      gap: 4px; 
+    }
+
+    .sub6 p{
+      margin:0;
+      padding:0;
+    }
+
+     .ach{
+      position:relative;
+      font-family: 'Kosugi Maru';
+      font-size: 36px;
+      right:-280px;
+      bottom: -450px; 
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+    }
+    
+    .sub7{
+      position: relative;
+      right:-750px;
+      bottom:-500px;
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+      font-size:32px;
+      font-family: 'Kosugi';
+      display: flex;
+      flex-direction: column;
+      line-height: 1.05;
+      gap: 4px;
+    }
+
+    .sub7 p{
       margin: 0;
       padding: 0;
-    }  
+    }
+
+    .socmed24{
+      background:#CFA0EA;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: cover;
+      padding: 60px 20px;
+      z-index: 10;
+      text-align: center;
+      padding-top: 50px;
+      font-family: 'Kosugi Maru';
+
+      
+    }
+    
+     .socmed24 h1{
+      font-size:64px;
+      margin-bottom: 40px; 
+      text-shadow: 4px 4px 8px rgba(155, 146, 146, 0.5);
+     }
+
+     .gallery-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .project-photo {
+     width: 300px;
+     height: auto;
+     border-radius: 10px;
+     overflow: hidden;
+     box-shadow: 0 0 20px rgba(255, 0, 255, 0.3);
+     transition: transform 0.3s ease;
+    }
+
+    .project-photo:hover {
+     transform: scale(1.05);
+   }
+
+   .project-photo img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+  }
+     
+   
+
+   
+
+   
+    
+    
+   
+     
 
     
 
