--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+
+
+
 .aboutc{
     background:#F8F8FF;
     background-position: center;
@@ -268,15 +271,17 @@
     .project-photo {
      width: 300px;
      height: auto;
+     
      border-radius: 10px;
      overflow: hidden;
+     margin: 5px;
+     
      box-shadow: 0 0 20px rgba(255, 0, 255, 0.3);
-     transition: transform 0.3s ease;
+     
+     
     }
 
-    .project-photo:hover {
-     transform: scale(1.05);
-   }
+    
 
    .project-photo img {
     width: 100%;
